# Omega

./: DoSetup.hs  LICENSE  Makefile.in  Omega.cabal  README  Setup.hs  aclocal.m4  configure  configure.ac
Data/Presburger/Omega/: Expr.hs  LowLevel.hsc  Rel.hs  Set.hs  SetRel.hs
src/: C_omega.cc  C_omega.h
test/: TestExpr.hs  runtests.hs
